feature(password-reset):user reset password functionality - Implement User reset password functionality.. - Implement validations to check user input - Implement tests for feature. [finshes #159987731]
